Break super long words in "description" string (e.g. long URLs) so as to prevent content overflow

--- a/css/isb.css
+++ b/css/isb.css
@@ -54,8 +54,15 @@
     font-weight: bold;
     color: #000;
 }
+.dataset-summary a:hover {
+    text-decoration: underline;
+}
 .dataset-currentrev {
     background: #fdc;
+}
+
+.breakwords {
+    overflow-wrap: anywhere;
 }
 
 .linkback {
